# NurtexMC

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/nurtex/: Cargo.toml  README.md
crates/nurtex-client/: Cargo.toml  README.md
crates/nurtex-client/examples/: minimal.rs
crates/nurtex-client/src/: client.rs  lib.rs  version.rs
crates/nurtex-client/src/structs/: structs.rs
crates/nurtex-codec/src/: buffer.rs  types.rs  varint.rs  varlong.rs
crates/nurtex-derive/: Cargo.toml
crates/nurtex-derive/src/: lib.rs  utils.rs
crates/nurtex-protocol/: Cargo.toml
crates/nurtex-protocol/examples/: minimal.rs
crates/nurtex-protocol/src/: lib.rs  packet.rs  reader.rs  writer.rs
crates/nurtex-protocol/src/connection/: connection.rs
crates/nurtex-protocol/src/packets/: mod.rs
crates/nurtex-protocol/src/packets/configuration/: packets.rs  union.rs
crates/nurtex-protocol/src/packets/handshake/: packets.rs  union.rs
crates/nurtex-protocol/src/packets/login/: packets.rs  union.rs
crates/nurtex-protocol/src/packets/play/: packets.rs  union.rs
crates/nurtex-protocol/src/packets/status/: packets.rs  union.rs
crates/nurtex-protocol/src/types/: additional_message_info.rs  client_command.rs  intention.rs  known_pack.rs  last_seen_message.rs  mod.rs  player_hand.rs  player_skin.rs  property.rs  report_detail.rs  resource_pack_state.rs  rotation.rs  server_link.rs  tag_group.rs  vector.rs
crates/nurtex-protocol/tests/: client.rs
crates/nurtex-proxy/: Cargo.toml  README.md
crates/nurtex-proxy/src/: error.rs  lib.rs  proxy.rs  result.rs
crates/nurtex/examples/: bot_customization.rs  cluster_control.rs  minimal_cluster.rs  minimal_swarm.rs  reading_packets.rs  reusable_cluster.rs  reusable_swarm.rs  swarm_control.rs  swarm_reading_packets.rs  swarm_with_speedometer.rs  writing_packets.rs
crates/nurtex/src/: lib.rs
crates/nurtex/src/bot/: bot.rs  capture.rs  components.rs  connection.rs  handle.rs  mod.rs
crates/nurtex/src/bot/extensions/: chat.rs
crates/nurtex/src/bot/plugins/: definition.rs  plugins.rs
crates/nurtex/src/cluster/: cluster.rs
crates/nurtex/src/storage/: storage.rs
crates/nurtex/src/swarm/: join_delay.rs  mod.rs  speedometer.rs  swarm.rs
crates/nurtex/src/world/: entity.rs
docs/: EN.md  RU.md
examples/: custom_event_handlers.rs  custom_package.rs  custom_swarm.rs  hello_world.rs  minimal_bot.rs  minimal_swarm.rs  swarm_control.rs
src/: lib.rs
src/bot/: account.rs  bot.rs  mod.rs  options.rs  terminal.rs  transmitter.rs
src/bot/components/: components.rs  experience.rs  inventory.rs  mod.rs  position.rs  profile.rs  rotation.rs  state.rs  velocity.rs
src/bot/events/: events.rs  invoker.rs
src/bot/handlers/: mod.rs
src/bot/handlers/base/: configuration.rs  login.rs  mod.rs
src/bot/handlers/custom/: command.rs  mod.rs  packet.rs
src/bot/physics/: physics.rs
src/bot/world/: chunk.rs  entity.rs  mod.rs  storage.rs
src/core/: bot.rs  common.rs  default.rs  mod.rs  swarm.rs
src/core/components/: mod.rs  physics.rs  profile.rs
src/core/data/: storage.rs
src/core/events/: events.rs  handlers.rs  invoker.rs  mod.rs
src/core/handler/: handler.rs
src/core/handlers/: base_processor.rs  command_processor.rs  mod.rs  packet_processor.rs
src/swarm/: mod.rs  swarm.rs
src/utils/: time.rs
tests/: bot.rs  swarm.rs
