[package]
name = "nurtex"
version = "0.5.1"
edition = "2024"
license = "MIT"
description = "Lightweight library for creating Minecraft bots. Asynchronous, optimized, ease of coding."
repository = "https://github.com/NurtexMC/nurtex"
homepage = "https://github.com/NurtexMC/nurtex"
documentation = "https://docs.rs/nurtex/latest/"
readme = "README.md"
keywords = ["minecraft", "bot", "async", "simple"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
azalea-protocol = { version = "0.15", features = ["connecting"] }
azalea-crypto = "0.15"
azalea-entity = "0.15"
azalea-core = "0.15"
azalea-buf = "0.15"
socks5-impl = { version = "0.7.3", features = ["client"] }
uuid = { version = "1", features = ["v4"] }
hashbrown = "0.16.1"