[package]
name = "nurtex-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Library that allows a Minecraft client to communicate with a server."
repository = "https://github.com/NurtexMC/nurtex"
homepage = "https://github.com/NurtexMC/nurtex"
documentation = "https://docs.rs/nurtex-protocol/latest/"
readme = "README.md"
keywords = ["minecraft", "protocol"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex_protocol"
path = "src/lib.rs"

[dependencies]
flate2.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true
hashbrown.workspace = true
once_cell.workspace = true
nurtex-codec.workspace = true
nurtex-encrypt.workspace = true
nurtex-derive.workspace = true