[package]
name = "nurtex"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Library for creating Minecraft bots."
repository = "https://github.com/NurtexMC/nurtex"
homepage = "https://github.com/NurtexMC/nurtex"
documentation = "https://docs.rs/nurtex/latest/"
readme = "README.md"
keywords = ["minecraft", "bot", "async", "simple"]
categories = ["games", "asynchronous"]

[lib]
name = "nurtex"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
uuid.workspace = true
nurtex-protocol.workspace = true
rand.workspace = true